project/test/semantics/bad/input/Bad09_shouldAlsoCheckNameConflictsBetweenAttributeGettersAndNormalMethods.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        getValue: () -> Int = 50
        count: () -> Int = 339 // DuplicateDeclarationError: an attribute with this name already exists
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
